# aggregator-uts

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: aggregator.db  aggregator.db-shm
publisher/: Dockerfile  publisher.py  requirements.txt
src/: __init__.py  database.py  main.py  models.py  stats.py
tests/: __init__.py  test_app.py
