# pyproject.toml

[project]
name = "uts-aggregator"
version = "0.1.0"
description = "UTS Log Aggregator with Idempotency and Deduplication"
requires-python = ">=3.11"

# Ini adalah dependencies UTAMA (Runtime)
# Setara dengan isi requirements.txt Anda
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "aiosqlite"
]

[project.optional-dependencies]
# Ini adalah dependencies PENGEMBANGAN (Testing)
# Di sinilah Anda meletakkan pytest dkk.
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"